[package]
name = "keepass-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.4.9"
actix-web = "4.1.0"
anyhow = "1.0.63"
async-fs = "1.6.0"
clap = { version = "3.2.20", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.24"
log = "0.4.17"
reqwest = "0.11.11"
rpassword = "7.0.0"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }
